fix tooltips showing out of bounds if the task is too big

--- a/src/scss/components/_element.scss
+++ b/src/scss/components/_element.scss
@@ -37,9 +37,7 @@
 }
 
 .rt-element__tooltip {
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
+  position: fixed;
   z-index: 2;
   padding: 10px;
   line-height: 1.3;
@@ -47,7 +45,7 @@
   text-align: left;
   background: $react-timelines-text-color;
   color: white;
-  transform: translateX(-50%) scale(0);
+  transform: translateX(-50%) translateY(-100%) scale(0);
   pointer-events: none;
 
   &::before {
@@ -66,6 +64,6 @@
 .rt-element:hover > .rt-element__tooltip,
 .rt-element:focus > .rt-element__tooltip {
   $delay: 0.3s;
-  transform: translateX(-50%) scale(1);
+  transform: translateX(-50%) translateY(-100%) scale(1);
   transition: transform 0s $delay;
 }
